icone das redes sociais

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li><a href="#">Contatos</a></li>
             </ul>
             <div class="social-links">
-                <img src="instagram 1.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
-                <img src="facebook 1.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
+                <img src="instagramrosa.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
+                <img src="facebookrosa.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
             </div>
         </nav>
     </header>
