--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             </ul>
             <div class="social-links">
                 <img src="instagramrosa.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
-                <img src="facebookrosa.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
+        
+                <img src="whatsapprosa.png" href="https://www.whatsapp.com" target="_blank"alt="whatsapp"></a>
             </div>
         </nav>
     </header>
