colei o carrosel de novo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ let currentIndex = 0;
             const totalImages = images.children.length;
             currentIndex += direction;
 
-            if (currentIndex <0>) {
+            if (currentIndex < 0) {
                 currentIndex = totalImages - 1; // Vai para a última imagem
             } else if (currentIndex >= totalImages) {
                 currentIndex = 0; // Volta para a primeira imagem
@@ -63,4 +63,4 @@ let currentIndex = 0;
 
             const offset = -currentIndex * 100; // Move o carrossel
             images.style.transform = `translateX(${offset}%)`;
-        }>
+        }
