--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
             <div class="social-links">
                 <img src="instagramrosa.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
-        
+                <img src="facebookrosa.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
                 <img src="whatsapprosa.png" href="https://www.whatsapp.com" target="_blank"alt="whatsapp"></a>
             </div>
         </nav>
@@ -46,6 +46,7 @@
 
 </div>
 <script src="script.js"></script>
+
 </body>
 </html>
 let currentIndex = 0;
@@ -55,7 +56,7 @@ let currentIndex = 0;
             const totalImages = images.children.length;
             currentIndex += direction;
 
-            if (currentIndex < 0) {
+            if (currentIndex <0>) {
                 currentIndex = totalImages - 1; // Vai para a última imagem
             } else if (currentIndex >= totalImages) {
                 currentIndex = 0; // Volta para a primeira imagem
@@ -63,4 +64,4 @@ let currentIndex = 0;
 
             const offset = -currentIndex * 100; // Move o carrossel
             images.style.transform = `translateX(${offset}%)`;
-        }
+        }>
