--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     
     <div class="carousel">
         <div class="carousel-images">
-            <img src="01.png" alt="Imagem 1">
-            <img src="2.png" alt="Imagem 2">
-            <img src="3.png" alt="Imagem 3">
+            <img src="bananasplit.png" alt="Imagem 1">
+            <img src="bananasplit.png" alt="Imagem 2">
+            <img src="bananasplit.png" alt="Imagem 3">
         </div>
         <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
         <button class="next" onclick="moveCarousel(1)">&#10095;</button>
