--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colégio Helena</title>
+    <title>Afternoon Coffee</title><link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="Logo.png" alt="Logo">
+                <img src="logogatinho.png" alt="Logo">
             </div>
             <ul class="menu">
                 <li><a href="#" class="active">Home</a></li>
