--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 </div>
 <script src="script.js"></script>
-let currentIndex = 0;
+   <li> let currentIndex = 0;
 
 function moveCarousel(direction) {
     const images = document.querySelector('.carousel-images');
@@ -61,7 +61,7 @@ function moveCarousel(direction) {
 
     const offset = -currentIndex * 100; // Move o carrossel
     images.style.transform = `translateX(${offset}%)`;
-}
+}</0>li>
 </body>
 </html>
 
