--- a/index.html
+++ b/index.html
@@ -47,21 +47,13 @@
     </div>
 
 </div>
-<script src="script.js"></script>let currentIndex = 0;
+<script src="script.js"></script><div class="carousel-container">
+    <div class="carousel-images">
+        <img src="image1.jpg" alt="Image 1">
+        <img src="image2.jpg" alt="Image 2">
+        <img src="image3.jpg" alt="Image 3">
+    </div>
+</div>
 
-    function moveCarousel(direction) {
-        const images = document.querySelector('.carousel-images');
-        const totalImages = images.children.length;
-        currentIndex += direction;
-    
-        if (currentIndex < 0) {
-            currentIndex = totalImages - 1; // Vai para a última imagem
-        } else if (currentIndex >= totalImages) {
-            currentIndex = 0; // Volta para a primeira imagem
-        }
-    
-        const offset = -currentIndex * 100; // Move o carrossel
-        images.style.transform = `translateX(${offset}%)`;
-    }
   
 
