minima ideia do que to fazendo

--- a/index.html
+++ b/index.html
@@ -1,59 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-        </body>
-        </html>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Afternoon Coffee</title><link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <img src="logogatinho.png" alt="Logo">
-            </div>
-            <ul class="menu">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Quem Somos</a></li>
-                <li class="dropdown">
-                    <a href="#">Cursos</a>
-                    <ul class="dropdown-content">
-                        <li><a href="#">Desenvolvimento de Sistemas</a></li>
-                        <li><a href="#">Formação de Docentes</a></li>
-                        <li><a href="#">Química para Empresas</a></li>
-                        <li><a href="#">Ensino Regular</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Contatos</a></li>
-            </ul>
-            <div class="social-links">
-                <img src="whatsapprosa.png" href="https://www.whatsapp.com" target="_blank"alt="whatsapp"></a>
-                <img src="instagramrosa.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
-                <img src="facebookrosa.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
-            </div>
-        </nav>
-    </header>
-    
-    <div class="carousel">
-        <div class="carousel-images">
-            <img src="bananasplit.png" alt="Imagem 1">
-            <img src="bananasplit.png" alt="Imagem 2">
-            <img src="bananasplit.png" alt="Imagem 3">
-        </div>
-        <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
-        <button class="next" onclick="moveCarousel(1)">&#10095;</button>
-    </div>
+    <head>
+        <meta>
+        <title>
+            <link>
+            <script>
 
-</div>
-<script src="script.js"></script><div class="carousel-container">
-    <div class="carousel-images">
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
-        <img src="image3.jpg" alt="Image 3">
-    </div>
-</div>
+            </script>
+            <Title>
+      <header>
+      </header>
+      <nav>
+      </nav>
+    </head>
+    <main>
+        <Section>
+            <article>
 
-  
-
+            </article>
+        </Section>
+    </main>
+    <footer>
+        <aside></aside>
+    </footer>
+</html>
