--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
             </script>
             <Title>
+                <body>
+            
+                </body>
       <header>
       </header>
       <nav>
