--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta>
         <title>
-            <link>
+            <link Afternoon Coffee>
             <script>
 
             </script>
