--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
     <head>
         <meta>
-        <title>
+        <title>Afternoon Coffee</title>
             <link Afternoon Coffee>
             <script>
 
