--- a/index.html
+++ b/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta>
-        <title>Afternoon Coffee</title>
-            <link Afternoon Coffee>
-            <script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Colégio Helena</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="Logo.png" alt="Logo">
+            </div>
+            <ul class="menu">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Quem Somos</a></li>
+                <li class="dropdown">
+                    <a href="#">Cursos</a>
+                    <ul class="dropdown-content">
+                        <li><a href="#">Desenvolvimento de Sistemas</a></li>
+                        <li><a href="#">Formação de Docentes</a></li>
+                        <li><a href="#">Química para Empresas</a></li>
+                        <li><a href="#">Ensino Regular</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Contatos</a></li>
+            </ul>
+            <div class="social-links">
+                <img src="instagram 1.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
+                <img src="facebook 1.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
+            </div>
+        </nav>
+    </header>
+    
+    <div class="carousel">
+        <div class="carousel-images">
+            <img src="01.png" alt="Imagem 1">
+            <img src="2.png" alt="Imagem 2">
+            <img src="3.png" alt="Imagem 3">
+        </div>
+        <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
+        <button class="next" onclick="moveCarousel(1)">&#10095;</button>
+    </div>
 
-            </script>
-            <Title>
-                <body>
-            
-                </body>
-      <header>
-      </header>
-      <nav>
-      </nav>
-    </head>
-    <main>
-        <Section>
-            <article>
+</div>
+<script src="script.js"></script>let currentIndex = 0;
 
-            </article>
-        </Section>
-    </main>
-    <footer>
-        <aside></aside>
-    </footer>
+function moveCarousel(direction) {
+    const images = document.querySelector('.carousel-images');
+    const totalImages = images.children.length;
+    currentIndex += direction;
+
+    if (currentIndex < 0) {
+        currentIndex = totalImages - 1; // Vai para a última imagem
+    } else if (currentIndex >= totalImages) {
+        currentIndex = 0; // Volta para a primeira imagem
+    }
+
+    const offset = -currentIndex * 100; // Move o carrossel
+    images.style.transform = `translateX(${offset}%)`;
+}/>
+
+</body>
 </html>
