--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colégio Helena</title>
+    <title>Afternoon Coffee</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -44,22 +44,7 @@
     </div>
 
 </div>
-<script src="script.js"></script>let currentIndex = 0;
-
-function moveCarousel(direction) {
-    const images = document.querySelector('.carousel-images');
-    const totalImages = images.children.length;
-    currentIndex += direction;
-
-    if (currentIndex < 0) {
-        currentIndex = totalImages - 1; // Vai para a última imagem
-    } else if (currentIndex >= totalImages) {
-        currentIndex = 0; // Volta para a primeira imagem
-    }
-
-    const offset = -currentIndex * 100; // Move o carrossel
-    images.style.transform = `translateX(${offset}%)`;
-}/>
+<script src="script.js"></script>
 
 </body>
 </html>
