--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <li><a href="#">Contatos</a></li>
             </ul>
             <div class="social-links">
-                <img src="instagram 1.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
-                <img src="facebook 1.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
+                <img src="whatsapprosa.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
+                <img src="instagramrosa.png" href="https://www.instagram.com" target="_blank" alt="Instagram"></a>
+                <img src="facebookrosa.png" href="https://www.facebook.com" target="_blank"alt="Facebook"></a>
             </div>
         </nav>
     </header>
@@ -45,6 +46,101 @@
 
 </div>
 <script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carrossel de Imagens</title>
+    <style>
+        /* Estilo básico do carrossel */
+        .carousel {
+            width: 100%;
+            max-width: 600px;
+            margin: 50px auto;
+            overflow: hidden;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+        }
+
+        .carousel-images {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .carousel-images img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        .carousel-control {
+            position: relative;
+            top: -200px;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 20px;
+        }
+
+        .carousel-control button {
+            background-color: rgba(0, 0, 0, 0.5);
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .carousel-control button:hover {
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+    </style>
+</head>
+<body>
+
+    <div class="carousel">
+        <div class="carousel-images">
+            <img src="https://via.placeholder.com/600x300/ff7f7f/333333?text=Imagem+1" alt="Imagem 1">
+            <img src="https://via.placeholder.com/600x300/7f7fff/333333?text=Imagem+2" alt="Imagem 2">
+            <img src="https://via.placeholder.com/600x300/7fff7f/333333?text=Imagem+3" alt="Imagem 3">
+        </div>
+    </div>
+
+    <div class="carousel-control">
+        <button onclick="previousSlide()">&#10094; Anterior</button>
+        <button onclick="nextSlide()">Próximo &#10095;</button>
+    </div>
+
+    <script>
+        let currentIndex = 0;
+
+        function showSlide(index) {
+            const slides = document.querySelectorAll('.carousel-images img');
+            const totalSlides = slides.length;
+
+            if (index >= totalSlides) {
+                currentIndex = 0;
+            } else if (index < 0) {
+                currentIndex = totalSlides - 1;
+            } else {
+                currentIndex = index;
+            }
+
+            const newTransformValue = -currentIndex * 100;
+            document.querySelector('.carousel-images').style.transform = `translateX(${newTransformValue}%)`;
+        }
+
+        function nextSlide() {
+            showSlide(currentIndex + 1);
+        }
+
+        function previousSlide() {
+            showSlide(currentIndex - 1);
+        }
+    </script>
+
+</body>
+</html>
 
 </body>
 </html>
