--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="Logo.png" alt="Logo">
+                <img src="logogatinho.png" alt="Logo">
             </div>
             <ul class="menu">
                 <li><a href="#" class="active">Home</a></li>
@@ -36,7 +36,7 @@
     
     <div class="carousel">
         <div class="carousel-images">
-            <img src="01.png" alt="Imagem 1">
+            <img src="bannerrosa.png" alt="Imagem 1">
             <img src="2.png" alt="Imagem 2">
             <img src="3.png" alt="Imagem 3">
         </div>
