--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <li class="dropdown">
                     <a href="#">Cursos</a>
                     <ul class="dropdown-content">
-                        <li><a href="#">Desenvolvimento de Sistemas</a></li>
-                        <li><a href="#">Formação de Docentes</a></li>
-                        <li><a href="#">Química para Empresas</a></li>
-                        <li><a href="#">Ensino Regular</a></li>
+                        <li><a href="#">Doces</a></li>
+                        <li><a href="#">Salgados</a></li>
+                        <li><a href="#">Café</a></li>
+                        <li><a href="#">chás</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Contatos</a></li>
