--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="bannerrosa.png" alt="bannerrosa">
     <header>
         <nav class="navbar">
             <div class="logo">
