--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <div class="carousel">
         <div class="carousel-images">
-            <img src="bannerrosa.png" alt="Imagem 1">
+            <img src="" alt="Imagem 1">
             <img src="2.png" alt="Imagem 2">
             <img src="3.png" alt="Imagem 3">
         </div>
