--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
         <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
         <button class="next" onclick="moveCarousel(1)">&#10095;</button>
     </div>
-
+    <div class="carousel">
+        <div class="carousel-images">
+            <img src="1.png" alt="Imagem 1 do carrossel">
+            <img src="2.png" alt="Imagem 2 do carrossel">
+            <img src="3.png" alt="Imagem 3 do carrossel">
+        </div>
+        <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
+        <button class="next" onclick="moveCarousel(1)">&#10095;</button>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
