--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <img src="logogatinho.png" alt="Logo do site">
             </div>
             <ul class="menu">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Quem Somos</a></li>
+                <li><a href="#" class="active">Receitas</a></li>
+                <li><a href="#">Melhores</a></li>
                 <li class="dropdown">
-                    <a href="#">Cursos</a>
+                    <a href="#">Oxi</a>
                     <ul class="dropdown-content">
                         <li><a href="#">Doces</a></li>
                         <li><a href="#">Salgados</a></li>
